[package]
name = "sui-queryable"
version = "0.1.0"
authors = ["Queryable Labs <opensource@queryable.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.137", default-features = false }
serde_json = "1.0.81"
tracing = "0.1.36"
parking_lot = { version = "0.12.1", features = [ "send_guard" ] }
move-core-types.workspace = true
sui-types = { path = "../sui-types" }
env_logger = "0.10.0"
queryable-core = { git = "https://github.com/Queryable-Labs/queryable-core.git", rev = "64c7dc5e4d8c8b1609dfba3154ee46505aa6c785" }
